--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
         <!-- 分页 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>4.1.4</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
         </dependency>
         <!-- druid数据库连接池 -->
         <dependency>
